--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -57,6 +57,7 @@
 
                       <script>
                       function openEditModal(machine) {
+                        console.log("machine info: " + machine)
                         // Populate the modal fields with the machine data
                         document.getElementById('legacy_id').value = machine.LegacyID;
                         document.getElementById('cid_number').value = machine.CIDNumber;
