--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -287,7 +287,7 @@
     <script>
       window.onload = function() {
       fetchmachines('Edmonton');
-      fetch('edit-modal.html')
+      fetch('machines-edit-modal.html')
         .then(response => response.text())
         .then(html => {
           document.getElementById('editModalContainer').innerHTML = html;
