changed edit modal to be for machines

--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -65,14 +65,14 @@
 
                         document.getElementById('name').value = machine.Name;
                         document.getElementById('genre').value = machine.Genre;
-                        document.getElementById('description').value = machine.description;
-                        document.getElementById('dimensions').value = machine.dimensions;
-                        document.getElementById('supplier').value = machine.supplier;
-                        document.getElementById('purchase_price').value = machine.purchase_price;
-                        document.getElementById('purchase_date').value = machine.purchase_date;
-                        document.getElementById('sale_price').value = machine.sale_price;
-                        document.getElementById('sale_date').value = machine.sale_date;
-                        document.getElementById('sold_to').value = machine.sold_to;
+                        document.getElementById('description').value = machine.Description;
+                        document.getElementById('dimensions').value = machine.Dimensions;
+                        document.getElementById('supplier').value = machine.Supplier;
+                        document.getElementById('purchase_price').value = machine.Purchase_price;
+                        document.getElementById('purchase_date').value = machine.Purchase_date;
+                        document.getElementById('sale_price').value = machine.Sale_price;
+                        document.getElementById('sale_date').value = machine.Sale_date;
+                        document.getElementById('sold_to').value = machine.Sold_to;
                         // Show the modal
                         $('#editMachineModal').modal('show');
                       }
