changed edit modal to be for machines

--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -68,11 +68,11 @@
                         document.getElementById('description').value = machine.Description;
                         document.getElementById('dimensions').value = machine.Dimensions;
                         document.getElementById('supplier').value = machine.Supplier;
-                        document.getElementById('purchase_price').value = machine.Purchase_price;
-                        document.getElementById('purchase_date').value = machine.Purchase_date;
-                        document.getElementById('sale_price').value = machine.Sale_price;
-                        document.getElementById('sale_date').value = machine.Sale_date;
-                        document.getElementById('sold_to').value = machine.Sold_to;
+                        document.getElementById('purchase_price').value = machine.PurchasePrice;
+                        document.getElementById('purchase_date').value = machine.PurchaseDate;
+                        document.getElementById('sale_price').value = machine.SalePrice;
+                        document.getElementById('sale_date').value = machine.SaleDate;
+                        document.getElementById('sold_to').value = machine.SoldTo;
                         // Show the modal
                         $('#editMachineModal').modal('show');
                       }
