--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -59,6 +59,7 @@
                       function openEditModal(machine) {
                         console.log("machine info: " + machine)
                         // Populate the modal fields with the machine data
+                        document.getElementById('machine_id').value = machine.MachineID;
                         document.getElementById('legacy_id').value = machine.LegacyID;
                         document.getElementById('cid_number').value = machine.CIDNumber;
                         document.getElementById('serial_number').value = machine.SerialNumber;
