--- a/Dashboard/machines-edit-modal.html
+++ b/Dashboard/machines-edit-modal.html
@@ -10,8 +10,7 @@
       </div>
       <div class="modal-body">
         <form class="user" id="editMachineForm" action="update_machine.php" method="post">
-          <input type="hidden" id="originalName" name="original_name">
-          <input type="hidden" id="originalAddress" name="original_address">
+          <input type="hidden" id="machine_id" name="machine_id">
           <div class="form-group">
               <input type="text" class="form-control form-control-user" id="name" name="name" placeholder="Game Name (Required)" required>
           </div>
