--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -53,6 +53,7 @@
                     <!-- Content Row -->
                     <div class="row">
                       <div id="editModalContainer"></div>
+                      <div id="machineHistoryModalContainer"></div>
                       <div id="machinesContainer"></div>
 
                       <script>
@@ -323,7 +324,7 @@
         fetch('machine_history_modal.html')
           .then(response => response.text())
           .then(html => {
-            document.getElementById('machineHistoryModal').innerHTML = html;
+            document.getElementById('machineHistoryModalContainer').innerHTML = html;
           });
       };
     </script>
