--- a/Dashboard/machine_history_modal.html
+++ b/Dashboard/machine_history_modal.html
@@ -1,36 +1,73 @@
-<!-- Location Management Modal -->
-<div class="modal fade" id="locationManagementModal" tabindex="-1" aria-labelledby="locationManagementModalLabel" aria-hidden="true">
+<!-- Edit Machine Modal -->
+<div class="modal fade" id="editMachineModal" tabindex="-1" aria-labelledby="editMachineModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="locationManagementModalLabel">Manage Location</h5>
+        <h5 class="modal-title" id="editMachineModalLabel">Edit Machine</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <h6 id="gameNameHeader">Game Name: <span id="gameName"></span></h6>
-        <h6>Current Location: <span id="currentLocation"></span></h6>
-
-        <!-- Add Location Section -->
-        <div id="addLocationSection">
-          <button type="button" class="btn btn-primary" onclick="showAddLocationForm()">Add Location</button>
-          <div id="addLocationForm" style="display: none;">
-            <input type="text" class="form-control" id="locationInput" placeholder="Enter Location" oninput="searchLocation()">
-            <div id="locationSuggestions" style="position: absolute; z-index: 1000;"></div>
-            <input type="date" class="form-control" id="startDateInput" placeholder="Start Date">
-            <input type="date" class="form-control" id="endDateInput" placeholder="End Date">
-            <button type="button" class="btn btn-success" onclick="addLocation()">Submit Location</button>
+        <form class="user" id="editMachineForm" action="update_machine.php" method="post">
+          <input type="hidden" id="machine_id" name="machine_id">
+          <div class="form-group">
+              <input type="text" class="form-control form-control-user" id="name" name="name" placeholder="Game Name (Required)" required>
           </div>
-        </div>
+          <div class="form-group">
+              <input type="text" class="form-control form-control-user" id="serial_number" name="serial_number" placeholder="Serial_Number  (Required)" required>
+          </div>
 
-        <!-- View Location History Section -->
-        <button type="button" class="btn btn-secondary" onclick="viewLocationHistory()">View Location History</button>
-        <div id="locationHistory"></div>
+          <div class="form-group">
+              <select class="form-control form-control-user-dropdown" id="genre" name="genre" required>
+                  <option value="">Genre (Required)</option>
+                  <option value="Shooter">Shooter</option>
+                  <option value="Ticket">Ticket</option>
+                  <option value="Prize">Prize</option>
+                  <option value="Racing">Racing</option>
+                  <option value="Fighting">Fighting</option>
+              </select>
+          </div>
+          <div class="form-group">
+              <input type="text" class="form-control form-control-user" id="legacy_id" name="legacy_id" placeholder="Legacy_ID">
+          </div>
+          <div class="form-group">
+              <input type="text" class="form-control form-control-user" id="cid_number" name="cid_number" placeholder="CID_Number">
+          </div>
+          <div class="form-group">
+              <input type="text" class="form-control form-control-user" id="purchase_price" name="purchase_price" placeholder="Purchase Price">
+          </div>
 
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
+          <div class="form-group">
+              <b>Purchase Date:</b>
+              <input type="date" class="form-control form-control-user" id="purchase_date" name="purchase_date" placeholder="Purchase Date">
+          </div>
+
+          <div class="form-group">
+              <input type="text" class="form-control form-control-user" id="sale_price" name="sale_price" placeholder="Sale Price">
+          </div>
+          <div class="form-group">
+            <b>Sale Date:</b>
+            <input type="date" class="form-control form-control-user" id="sale_date" name="sale_date" placeholder="Sale Date">
+          </div>
+          <div class="form-group">
+              <input type="text" class="form-control form-control-user" id="sold_to" name="sold_to" placeholder="Sold To">
+          </div>
+
+          <div class="form-group">
+              <input type="text" class="form-control form-control-user" id="description" name="description" placeholder="Notes">
+          </div>
+          <div class="form-group">
+              <input type="text" class="form-control form-control-user" id="dimensions" name="dimensions" placeholder="Dimensions">
+          </div>
+          <div class="form-group">
+              <input type="text" class="form-control form-control-user" id="supplier" name="supplier" placeholder="Supplier">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Save changes</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
