Added machine history modal

--- a/Dashboard/machine_history_modal.html
+++ b/Dashboard/machine_history_modal.html
@@ -1,9 +1,9 @@
 <!-- Edit Machine Modal -->
-<div class="modal fade" id="editMachineModal" tabindex="-1" aria-labelledby="editMachineModalLabel" aria-hidden="true">
+<div class="modal fade" id="machineHistoryModal" tabindex="-1" aria-labelledby="machineHistoryModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="editMachineModalLabel">Edit Machine</h5>
+        <h5 class="modal-title" id="machineHistoryModalLabel">Edit Machine</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
