--- a/Dashboard/machine_history_modal.html
+++ b/Dashboard/machine_history_modal.html
@@ -9,7 +9,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <h1 id="name"> name:</h1>
+        <h1 id="name"></h1>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="submit" class="btn btn-primary">Save changes</button>
       </div>
