--- a/Dashboard/machine_history_modal.html
+++ b/Dashboard/machine_history_modal.html
@@ -10,7 +10,7 @@
       </div>
       <div class="modal-body">
         <input type="hidden" id="machine_id">
-        <h1 id="name">Name:</h1>
+        <h1 id="machine_name">Name:</h1>
         <!-- Additional content here -->
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="submit" class="btn btn-primary">Save changes</button>
