Added machine history modal

--- a/Dashboard/machine_history_modal.html
+++ b/Dashboard/machine_history_modal.html
@@ -25,7 +25,7 @@
                         locationDiv.innerHTML = `
                         <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                             Current Location</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">${location.name}</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">${location.LocationID}</div>
                         <button onclick="fetchMachineHistory(${location.machineId})">View History</button>
                         `;
                         locationContainer.appendChild(locationDiv);
