Added machine history modal

--- a/Dashboard/machine_history_modal.html
+++ b/Dashboard/machine_history_modal.html
@@ -65,10 +65,7 @@
             });
         }
 
-        window.onload = function() {
-          console.log("window is open")
-          fetchCurrLocation();
-        };
+
         </script>
 
         <!-- Additional content here -->
@@ -78,3 +75,9 @@
     </div>
   </div>
 </div>
+<script>
+  window.onload = function() {
+    console.log("window is open")
+    fetchCurrLocation();
+  };
+</script>
