--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -323,27 +323,37 @@
     </script>
 
     <script>
-    function fetchCurrLocation(mid) {
-        console.log("fetching current location")
-        fetch(`get_curr_location.php?MachineID=${mid}`) // Adjust this to your PHP endpoint
-            .then(response => response.json())
-            .then(data => {
-                console.log("got into api end point")
-                const locationContainer = document.getElementById('location_container');
-                data.forEach(location => {
-                    console.log("got a location!")
-                    // Existing code to create locationDiv
-                    const locationDiv = document.createElement('div');
-                    locationDiv.innerHTML = `
-                    <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                        Current Location</div>
-                    <div class="h5 mb-0 font-weight-bold text-gray-800">${location.LocationID}</div>
-                    <button onclick="fetchMachineHistory(${location.machineId})">View History</button>
-                    `;
-                    locationContainer.appendChild(locationDiv);
-                });
-            });
-    }
+      function fetchCurrLocation(mid) {
+      console.log("fetching current location");
+      fetch(`get_curr_location.php?MachineID=${mid}`) // Adjust this to your PHP endpoint
+          .then(response => response.json())
+          .then(data => {
+              console.log("Response data:", data); // Debugging: log the response
+
+              // Ensure data is in array format
+              if (!Array.isArray(data)) {
+                  data = [data]; // Convert to an array if it's not
+              }
+
+              const locationContainer = document.getElementById('location_container');
+              data.forEach(location => {
+                  console.log("got a location!");
+                  // Existing code to create locationDiv
+                  const locationDiv = document.createElement('div');
+                  locationDiv.innerHTML = `
+                  <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                      Current Location</div>
+                  <div class="h5 mb-0 font-weight-bold text-gray-800">${location.LocationID}</div>
+                  <button onclick="fetchMachineHistory(${location.machineId})">View History</button>
+                  `;
+                  locationContainer.appendChild(locationDiv);
+              });
+          })
+          .catch(error => {
+              console.error('Error:', error);
+          });
+  }
+
 
     function fetchMachineHistory(machineId) {
         fetch('get_machine_history.php', {
