Added machine history modal

--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -336,7 +336,7 @@
                   locationDiv.innerHTML = `
                   <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                       Current Location</div>
-                  <div class="h5 mb-0 font-weight-bold text-gray-800">${location.LocationName}, ${location.Address}</div>
+                  <div class="h5 mb-0 font-weight-bold text-gray-800">${location.LocationName}, ${location.LocationAddress}</div>
                   `;
                   locationContainer.appendChild(locationDiv);
               });
