--- a/Dashboard/machine_history_modal.html
+++ b/Dashboard/machine_history_modal.html
@@ -16,7 +16,7 @@
 
 
         <!-- Additional content here -->
-        <button type="button" class="btn btn-primary" add-machine-history-id="${machine.MachineID}">Update Location</button>
+        <button type="button" class="btn btn-primary" id="add-machine-history-btn">Update Location</button>
         <button type="submit" class="btn btn-primary">View History</button>
       </div>
     </div>
