Added machine history modal

--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -108,7 +108,7 @@
                         document.getElementById('machine_name').textContent = machine.Name;
                         // Show the modal
                         console.log("opening add history modal");
-                        $('#machineHistoryModal').modal('hidden');
+                        $('#machineHistoryModal').modal('hide');
                         $('#addMachineHistoryModal').modal('show');
                       }
 
