--- a/Dashboard/add_machine_history_modal.html
+++ b/Dashboard/add_machine_history_modal.html
@@ -12,21 +12,16 @@
         <form class="user" id="addMachineHistoryForm" action="add_machine_history.php" method="post">
           <input type="hidden" id="machine_id" name="machine_id">
           <div class="form-group">
-              <select class="form-control form-control-user-dropdown" id="genre" name="genre" required>
-                  <option value="">Location (Required)</option>
-                  <option value="Shooter">Shooter</option>
-                  <option value="Ticket">Ticket</option>
-                  <option value="Prize">Prize</option>
-                  <option value="Racing">Racing</option>
-                  <option value="Fighting">Fighting</option>
-              </select>
+              <input type="text" class="form-control form-control-user" id="locationInput" placeholder="Location (Required)" required>
+              <div id="locationSuggestions" class="suggestions-box"></div>
           </div>
+
           <div class="form-group">
               <b>Start Date (Required):</b>
               <input type="date" class="form-control form-control-user" id="start_date" name="start_date" placeholder="Start Date">
           </div>
           <div class="form-group">
-            <b>End Date (Required):</b>
+            <b>End Date</b>
             <input type="date" class="form-control form-control-user" id="end_date" name="end_date" placeholder="End Date">
           </div>
           <div class="modal-footer">
