--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -410,6 +410,39 @@
 
 
     </script>
+    <script>
+   document.addEventListener('DOMContentLoaded', function() {
+       var locationInput = document.getElementById('locationInput'); // Make sure this ID matches your input field's ID
+       var suggestionsBox = document.getElementById('locationSuggestions'); // And this one matches the ID of your suggestions box
+
+       locationInput.addEventListener('input', function() {
+           var searchTerm = this.value;
+
+           if (searchTerm.length > 1) {
+               fetch(`location_suggestions.php?search=${searchTerm}`) // Adjust to your PHP endpoint
+                   .then(response => response.json())
+                   .then(data => {
+                       suggestionsBox.innerHTML = '';
+                       data.forEach(location => {
+                           var suggestion = document.createElement('div');
+                           suggestion.textContent = location.Name;
+                           suggestion.classList.add('suggestion');
+                           suggestion.addEventListener('click', function() {
+                               locationInput.value = this.textContent;
+                               suggestionsBox.innerHTML = '';
+                           });
+                           suggestionsBox.appendChild(suggestion);
+                       });
+                   })
+                   .catch(error => {
+                       console.error('Error:', error);
+                   });
+           } else {
+               suggestionsBox.innerHTML = '';
+           }
+       });
+   });
+   </script>
 
 
 </body>
